--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,node,visualstudiocode
+/test-results/
+/playwright-report/
+/playwright/.cache/
